--- a/greeting/index.html
+++ b/greeting/index.html
@@ -106,8 +106,8 @@ Once again happy bornday Amicha 😊</p>
 	</div>
 	<script  src="js/index.js"></script>
 	<audio loop="loop" autoplay="autoplay">
-		<source src="../music.mp3" id="song" />
-		<source src="../music.mp3" id="audio" />
+		<source src="../music2.mp3" id="song" />
+		<source src="../music2.mp3" id="audio" />
 			Your browser does not support the audio element.
 	</audio>
 </body>
