--- a/pics/index.html
+++ b/pics/index.html
@@ -80,7 +80,7 @@
 				<img class="content__img" src="img/11.jpg" alt="Happy Birthday" />
 				<img class="content__img" src="img/12.jpg" alt="Happy Birthday" />
 				
-				<h6 class="content__title">Bojuu</h6>
+				<h5 class="content__title">♡BOJUU♡</h5>
 			</div><!--/content-->
 		</main>
 		<audio loop="loop" autoplay="autoplay">
