--- a/143/index.html
+++ b/143/index.html
@@ -21,8 +21,8 @@
 	<div id="legend"></div>
 	<script type="text/javascript" src="script.js"></script>
   <audio loop="loop" autoplay="autoplay">
-    <source src="../music1.mp3" id="song" />
-    <source src="../music1.mp3" id="audio" />
+    <source src="../music.mp3" id="song" />
+    <source src="../music.mp3" id="audio" />
       Your browser does not support the audio element.
   </audio>
   
