--- a/wish/index.html
+++ b/wish/index.html
@@ -10,7 +10,7 @@
         <style>
             body{
                 font-family: 'Montserrat';
-                background-color: #fff;
+                background-color: #C4D9FD;
                 width: 100% !important;
                 overflow-x: hidden;
             }
