--- a/pics/index.html
+++ b/pics/index.html
@@ -64,7 +64,7 @@
 				<h2 class="frame__pagetitle">Happy Birthday<span>Made with ❤ by Utsha</span></h2>
 			</div>
 			<div align="right">
-        		<button class="button" style="vertical-align:middle"><span><a href="https://drive.google.com/file/d/1sXry-Zk2PDE1d1N7e9Bc2DfCkNHbZymO/view?usp=sharing">Next</a></span></button> <!-- CHANGE DOMAIN NAME HERE -->
+        		<button class="button" style="vertical-align:middle"><span><a href="https://advik274.github.io/video/">Next</a></span></button> <!-- CHANGE DOMAIN NAME HERE -->
     		</div>
 			<div class="content">
 				<img class="content__img" src="img/1.jpg" alt="Happy Birthday" />
